TMS toggle in index.html

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ var layer_1926_2 = L.tileLayer('https://storage.googleapis.com/plattsburg-sanbor
   pane: 'pane_1926_2',
   minZoom: 14,
   maxNativeZoom: 21,
-  maxZoom: 21
-	// , tms: false
+  maxZoom: 21,
+	tms: false
 });
 
 map.createPane('pane_1909_3');
@@ -167,8 +167,8 @@ var layer_1909_3 = L.tileLayer('https://storage.googleapis.com/plattsburg-sanbor
   pane: 'pane_1909_3',
   minZoom: 14,
   maxNativeZoom: 21,
-  maxZoom: 21
-	// , tms: false
+  maxZoom: 21,
+	tms: false
 });
 
 map.createPane('pane_1898_4');
@@ -182,8 +182,8 @@ var layer_1898_4 = L.tileLayer('https://storage.googleapis.com/plattsburg-sanbor
   pane: 'pane_1898_4',
   minZoom: 14,
   maxNativeZoom: 21,
-  maxZoom: 21
-	// , tms: false
+  maxZoom: 21,
+	tms: false
 });
 
 map.createPane('pane_1892_5');
@@ -197,8 +197,8 @@ var layer_1892_5 = L.tileLayer('https://storage.googleapis.com/plattsburg-sanbor
   pane: 'pane_1892_5',
   minZoom: 14,
   maxNativeZoom: 21,
-  maxZoom: 21
-		// , tms: false
+  maxZoom: 21,
+	tms: false
 });
 
 map.createPane('pane_1886_6');
@@ -212,8 +212,8 @@ var layer_1886_6 = L.tileLayer('https://storage.googleapis.com/plattsburg-sanbor
   pane: 'pane_1886_6',
   minZoom: 14,
   maxNativeZoom: 21,
-  maxZoom: 21
-		// , tms: false
+  maxZoom: 21,
+	tms: false
 });
       // Default visible year
       map.addLayer(layer_1886_6);
